# LightGlue-OnnxRunner-cpp

./: .file-templates  .gitignore  CMakeLists.txt  README.md
.history/: README_20240120214900.md  README_20240120214914.md  README_20240120214924.md  README_20240120214949.md  README_20240120215012.md  README_20240120215024.md  README_20240120215108.md  README_20240120215115.md  README_20240120215133.md  README_20240120215137.md  README_20240120215241.md  README_20240120215415.md  README_20240120215433.md  README_20240120215517.md  README_20240120215522.md  README_20240120215613.md  README_20240120215633.md  README_20240120215647.md  README_20240120215649.md  README_20240120215733.md  README_20240120215745.md  README_20240120215752.md
.history/config/: param_20240120181213.json  param_20240120181223.json  param_20240120181246.json  param_20240120181259.json  param_20240120181323.json  param_20240120181344.json  param_20240120181356.json  param_20240120181410.json  param_20240120181422.json  param_20240120181424.json  param_20240120181443.json  param_20240120181450.json  param_20240120181454.json  param_20240120181506.json  param_20240120181511.json  param_20240120181656.json  param_20240120181728.json  param_20240120181742.json
.history/include/: combined_onnx_runner_20240120094700.h  combined_onnx_runner_20240120181950.h  configuration_20240120175614.h  configuration_20240120175635.h  configuration_20240120175910.h  configuration_20240120180024.h  configuration_20240120180227.h  configuration_20240120180659.h  configuration_20240120180730.h  configuration_20240120180853.h  configuration_20240120180921.h  configuration_20240120180927.h  configuration_20240120180939.h  configuration_20240120181006.h  configuration_20240120181018.h  configuration_20240120181030.h  configuration_20240120181037.h  configuration_20240120181045.h  visualizer_20240120134407.h  visualizer_20240120230757.h  visualizer_20240120230808.h  visualizer_20240120230811.h
.history/include/combined_onnx_runner/: combined_onnx_runner_20240120182013.h  combined_onnx_runner_20240120233220.h
.history/include/decoupled_onnx_runner/: decoupled_onxx_runner_20240120232421.h  decoupled_onxx_runner_20240120232430.h  decoupled_onxx_runner_20240120232437.h  decoupled_onxx_runner_20240120232448.h  decoupled_onxx_runner_20240120232508.h  decoupled_onxx_runner_20240120232520.h  decoupled_onxx_runner_20240120232532.h  decoupled_onxx_runner_20240120233125.h  decoupled_onxx_runner_20240120233138.h  decoupled_onxx_runner_20240120233150.h  decoupled_onxx_runner_20240120233238.h  decoupled_onxx_runner_20240120233252.h  decoupled_onxx_runner_20240120233323.h  decoupled_onxx_runner_20240120233332.h  decoupled_onxx_runner_20240120233413.h  decoupled_onxx_runner_20240120233429.h  decoupled_onxx_runner_20240120233441.h  decoupled_onxx_runner_20240120233448.h  decoupled_onxx_runner_20240120233522.h  decoupled_onxx_runner_20240120233524.h  decoupled_onxx_runner_20240120233529.h  decoupled_onxx_runner_20240120233542.h  decoupled_onxx_runner_20240120233554.h  decoupled_onxx_runner_20240120233600.h  decoupled_onxx_runner_20240120233611.h  decoupled_onxx_runner_20240120233712.h  decoupled_onxx_runner_20240120233714.h  decoupled_onxx_runner_20240120233746.h  decoupled_onxx_runner_20240120233800.h  decoupled_onxx_runner_20240120233848.h  decoupled_onxx_runner_20240120233909.h  decoupled_onxx_runner_20240120233923.h  decoupled_onxx_runner_20240120234057.h  decoupled_onxx_runner_20240120234119.h  decoupled_onxx_runner_20240120234201.h  decoupled_onxx_runner_20240120234221.h  decoupled_onxx_runner_20240120234233.h  decoupled_onxx_runner_20240121000537.h  (+11 more)
.history/src/: combined_onnx_runner_20240120134241.cpp  combined_onnx_runner_20240120181959.cpp  combined_onnx_runner_20240120182032.cpp  combined_onnx_runner_20240120183007.cpp  combined_onnx_runner_20240120183545.cpp  combined_onnx_runner_20240120183733.cpp  combined_onnx_runner_20240120183735.cpp  combined_onnx_runner_20240120183737.cpp  combined_onnx_runner_20240120183855.cpp  combined_onnx_runner_20240120183912.cpp  combined_onnx_runner_20240120183927.cpp  combined_onnx_runner_20240120183932.cpp  combined_onnx_runner_20240120183943.cpp  combined_onnx_runner_20240120222123.cpp  combined_onnx_runner_20240120224154.cpp  combined_onnx_runner_20240120224155.cpp  combined_onnx_runner_20240120224300.cpp  combined_onnx_runner_20240120224302.cpp  combined_onnx_runner_20240120224413.cpp  combined_onnx_runner_20240120224416.cpp  combined_onnx_runner_20240120224520.cpp  combined_onnx_runner_20240120224605.cpp  combined_onnx_runner_20240120225025.cpp  combined_onnx_runner_20240120225142.cpp  combined_onnx_runner_20240120225246.cpp  combined_onnx_runner_20240120225250.cpp  combined_onnx_runner_20240120225317.cpp  combined_onnx_runner_20240120225333.cpp  combined_onnx_runner_20240120225629.cpp  combined_onnx_runner_20240120225659.cpp  combined_onnx_runner_20240120225708.cpp  combined_onnx_runner_20240120231009.cpp  combined_onnx_runner_20240120231421.cpp  combined_onnx_runner_20240120231439.cpp  image_process_20240120230003.cpp  image_process_20240120230049.cpp  main_20240120135113.cpp  main_20240120180455.cpp  main_20240120181542.cpp  main_20240120181842.cpp  (+56 more)
config/: param.json
doc/: README-en.md
include/: base_onnx_runner.h  combined_onnx_runner.h  configuration.h  decoupled_onxx_runner.h
include/extractor/: extractor.h
include/feature/: feature.h
include/frame/: frame.h  key_frame.h
include/log/: logger.h
include/logger/: logger.h
include/map_point/: map_point.h
include/utilities/: geometric_tools.h  motion_estimator.h  visualizer.h
node/: combined_test.cpp  decoupled_test.cpp  extractor_test.cpp  matcher_test.cpp
src/: combined_onnx_runner.cpp  combined_test.cpp  decoupled_onnx_runner.cpp  decoupled_test.cpp  image_process.cpp
src/extractor/: extractor.cpp
src/frame/: frame.cpp
src/log/: logger.cpp
src/logger/: logger.cpp
src/matcher/: matcher.cpp
src/utilities/: image_process.cpp
test/: extractor_test.cpp  matcher_test.cpp
unit_test/: geometric_tools_test.cpp
(+42 files in other folders)
